登录页面集成

--- a/ng-alain/src/assets/i18n/en.json
+++ b/ng-alain/src/assets/i18n/en.json
@@ -101,5 +101,10 @@
     "system": "System",
     "admin": "Authorization Management",
     "roles": "Role",
-    "tenants": "Tenant"
+    "tenants": "Tenant",
+    "homeindex": {
+     "title":"Home",
+     "welcome":"Welcome!"
+    }
 }
+
