--- a/ng-alain/src/assets/i18n/zh-CN.json
+++ b/ng-alain/src/assets/i18n/zh-CN.json
@@ -101,5 +101,9 @@
     "system": "系统",
     "admin": "权限管理",
     "roles": "角色",
-    "tenants": "租户"
+    "tenants": "租户",
+    "homeindex": {
+     "title":"主页",
+     "welcome":"欢迎!"
+    }
 }
