添加角色查询

--- a/ng-alain/src/assets/i18n/en.json
+++ b/ng-alain/src/assets/i18n/en.json
@@ -105,6 +105,11 @@
     "homeindex": {
      "title":"Home",
      "welcome":"Welcome!"
+    },
+    "rolepage":{
+        "title":"Role Management",
+        "name":"Role Name",
+        "displayname":"Role Display Name"
     }
 }
 
